--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "vercel-build": "npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.19.0",
     "@prisma/client": "^6.19.0",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
