--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "postinstall": "prisma generate",
-    "vercel-build": "npx prisma migrate deploy && next build"
+    "vercel-build": "npx prisma migrate deploy && npx prisma db seed && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
