--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.19.0",
     "@prisma/client": "^6.19.0",
+    "@react-email/components": "^1.0.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.5.2",
     "ws": "^8.18.3"
   },
   "devDependencies": {
