--- a/app/(pwa)/manifest.json/manifest.template.json
+++ b/app/(pwa)/manifest.json/manifest.template.json
@@ -2,7 +2,7 @@
   "name": "Brutons Tribunal",
   "short_name": "Brutons Tribunal",
   "description": "Progressive Web App for Brutons Tribunal",
-  "version": "1.0.0",
+  "version": "__VERSION__",
   "start_url": "/pwa",
   "display": "standalone",
   "background_color": "#dbeafe",
@@ -23,7 +23,10 @@
       "purpose": "any"
     }
   ],
-  "categories": ["business", "productivity"],
+  "categories": [
+    "business",
+    "productivity"
+  ],
   "lang": "en",
   "dir": "ltr"
 }
