--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@prisma/adapter-neon": "^6.19.0",
     "@prisma/client": "^6.19.0",
     "@react-email/components": "^1.0.1",
-    "next": "16.0.1",
-    "next-auth": "^4.24.13",
+    "next": "^16.0.10",
+    "next-auth": "^4.24.7",
     "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
