--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^16.0.10",
     "next-auth": "^4.24.7",
     "openai": "^6.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
